# ksp-builder

./: KSPROJECT_KEYS.md  README.md  pyproject.toml
ksp_builder/: __init__.py  _gradle.py  _java.py  _kivy_school.py
tests/: test_backend.py  test_java.py  test_kivy_school_gradle.py
