[build-system]
requires = ["setuptools>=68"]
build-backend = "ksp_builder"
backend-path = ["."]

[project]
name = "ksp-builder"
version = "0.1.0"
description = "PEP 517 build backend for KSProject-based packages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ksp-builder contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kivy-school/ksp-builder"
Repository = "https://github.com/kivy-school/ksp-builder"

[tool.setuptools]
packages = ["ksp_builder"]
